// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render a badge with a pill border radius 1`] = `
<div
  class="cds-badge cds-badge__neutral cds-badge__pill"
>
  <span>
    Test Badge
  </span>
</div>
`;

exports[`Badge should render a badge with an icon 1`] = `
<div
  class="cds-badge cds-badge__neutral cds-badge__rounded cds-badge__icon-start"
>
  <span>
    Test Badge
  </span>
  <svg
    class="cds-icon__svg--default"
    fill="currentColor"
    height="12"
    viewBox="0 0 256 256"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Icon for badge: Test Badge
    </title>
    <path
      d="M228.12,145.14,192,123.47V104a8,8,0,0,0-4-7L136,67.36V48h16a8,8,0,0,0,0-16H136V16a8,8,0,0,0-16,0V32H104a8,8,0,0,0,0,16h16V67.36L68,97.05a8,8,0,0,0-4,7v19.47L27.88,145.14A8,8,0,0,0,24,152v64a8,8,0,0,0,8,8h80a8,8,0,0,0,8-8V168a8,8,0,0,1,16,0v48a8,8,0,0,0,8,8h80a8,8,0,0,0,8-8V152A8,8,0,0,0,228.12,145.14ZM40,156.53l24-14.4V208H40ZM128,144a24,24,0,0,0-24,24v40H80V108.64l48-27.43,48,27.43V208H152V168A24,24,0,0,0,128,144Zm88,64H192V142.13l24,14.4Z"
    />
  </svg>
</div>
`;

exports[`Badge should render a badge with an icon at the end 1`] = `
<div
  class="cds-badge cds-badge__neutral cds-badge__rounded cds-badge__icon-end"
>
  <span>
    Test Badge
  </span>
  <svg
    class="cds-icon__svg--default"
    fill="currentColor"
    height="12"
    viewBox="0 0 256 256"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Icon for badge: Test Badge
    </title>
    <path
      d="M228.12,145.14,192,123.47V104a8,8,0,0,0-4-7L136,67.36V48h16a8,8,0,0,0,0-16H136V16a8,8,0,0,0-16,0V32H104a8,8,0,0,0,0,16h16V67.36L68,97.05a8,8,0,0,0-4,7v19.47L27.88,145.14A8,8,0,0,0,24,152v64a8,8,0,0,0,8,8h80a8,8,0,0,0,8-8V168a8,8,0,0,1,16,0v48a8,8,0,0,0,8,8h80a8,8,0,0,0,8-8V152A8,8,0,0,0,228.12,145.14ZM40,156.53l24-14.4V208H40ZM128,144a24,24,0,0,0-24,24v40H80V108.64l48-27.43,48,27.43V208H152V168A24,24,0,0,0,128,144Zm88,64H192V142.13l24,14.4Z"
    />
  </svg>
</div>
`;

exports[`Badge should render an icon only badge 1`] = `
<div
  class="cds-badge cds-badge__neutral cds-badge__rounded cds-badge__icon-start"
>
  <svg
    class="cds-icon__svg--default"
    fill="currentColor"
    height="12"
    viewBox="0 0 256 256"
    width="12"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Icon for badge: Test Badge
    </title>
    <path
      d="M228.12,145.14,192,123.47V104a8,8,0,0,0-4-7L136,67.36V48h16a8,8,0,0,0,0-16H136V16a8,8,0,0,0-16,0V32H104a8,8,0,0,0,0,16h16V67.36L68,97.05a8,8,0,0,0-4,7v19.47L27.88,145.14A8,8,0,0,0,24,152v64a8,8,0,0,0,8,8h80a8,8,0,0,0,8-8V168a8,8,0,0,1,16,0v48a8,8,0,0,0,8,8h80a8,8,0,0,0,8-8V152A8,8,0,0,0,228.12,145.14ZM40,156.53l24-14.4V208H40ZM128,144a24,24,0,0,0-24,24v40H80V108.64l48-27.43,48,27.43V208H152V168A24,24,0,0,0,128,144Zm88,64H192V142.13l24,14.4Z"
    />
  </svg>
</div>
`;

exports[`Badge should render default props correctly 1`] = `
<div
  class="cds-badge cds-badge__neutral cds-badge__rounded"
>
  <span>
    Test Badge
  </span>
</div>
`;
